--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -5,11 +5,9 @@
 <title>Bowling League</title>
 </head>
 <body>
-<a href = "addTeam.html"> Add a new team</a>
-<a href = "editBowlingLeagueServlet"> Add a new player</a>
-<a href = "viewAllPlayersServlet"> View all players</a>
-<a href = "viewAllTeamsServlet"> View all teams with players</a>
-<a href = "editBowlingLeagueServlet"> Delete player</a>
-<a href = "editBowlingLeagueServlet"> Delete team</a>
+<a href = "addTeam.html"> Add a new team</a><br />
+<a href = "addPlayer.html"> Add a new player</a><br />
+<a href = "ViewAllPlayersServlet"> View all players</a><br />
+<a href = "ViewAllTeamsServlet"> View all teams</a>
 </body>
 </html>
